--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Web Development\HTML - Personal Site\Images\Vishnu-modified.png" alt="vishnu profile picture"></td>
+      <td><img src="Images\Vishnu-modified.png" alt="vishnu profile picture"></td>
       <td>
         <h1>Vishnu Kulathunkal</h1>
         <p><em>Student at <strong>PCE</strong></em></p>
